# bpopsim

./: .hgignore  CodingProjects.md  Makefile.am  ProjectHome.md  configure.ac
src/R/: Analysis.R  AverageFitness.R  MullerPlot.R
src/c/: bpopsim.1
src/c/bpopsim/: Makefile.am  anyoption.cpp  anyoption.h  cLineageTree.cc  cLineageTree.h  cPopulation.cc  cPopulation.h  cSubpopulation.cc  cSubpopulation.cc~  cSubpopulation.h  cSubpopulation.h~  commandline.cpp  commandline.h  common.h  compile  icsilog.h  individual.h  lList.cc  lList.h  lineageTree.cc  lineageTree.h  main.cpp  pop_sim_header.cpp  pop_sim_header.h  random.cpp  random.h  tree.hh  tree_util.hh
src/c/bpopsim.xcodeproj/: jbarrick.mode1v3  jbarrick.pbxuser  project.pbxproj
src/c/popsim.xcodeproj/: jbarrick.mode1v3  jbarrick.pbxuser  project.pbxproj
src/mathematica/: muller_plot_plus.nb
src/matlab/: establishment_probability.m  establishment_probability_table.m  muller_plot.m
src/perl/MarkerDivergence/: Build.PL  Changes  MANIFEST  README
src/perl/MarkerDivergence/lib/: MarkerDivergence.pm
src/perl/MarkerDivergence/lib/MarkerDivergence/: KS_test_2d.pm
src/perl/MarkerDivergence/t/: 00-load.t  boilerplate.t
src/python/: muller_plot.py
